<resources>
    <string name="app_name">TriQuiz</string>
    <string name="title_home">Home</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="name">Name</string>
    <string name="change">Choose Difficulties</string>
    <string name="start">Start</string>
    <string name="time">10:00</string>
    <string name="question_total">Question : 0/5</string>
    <string name="score">Score : 0</string>
    <string name="correct">Correct : 0</string>
    <string name="wrong">Wrong : 0</string>
    <string name="next">Next</string>
    <string name="go_home">Go Home</string>
    <string name="correct_answer">Correct Answer :</string>
    <string name="your_score_is">Your Score is</string>
    <string name="initial_score">0</string>
    <string name="finish">Finish</string>
    <string name="confirmation">Confirmation</string>
    <string name="time_up">Time\'s Up!</string>
    <string name="time_up_information">You running out time, you can retake the quiz</string>
    <string name="exit_confirmation">Time is still available, are you sure want to end the quiz?</string>

    <string name="error_message">Something went wrong</string>
    <string name="error_message_edt">Please input your name</string>
    <string-array name="list_difficulties">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string name="difficulties_text">Difficulty : %s</string>
    <string name="clear_leaderboards">Clear Leaderboards</string>
    <string name="no_leaderboards">No Leaderboards</string>
</resources>