<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pregame.PreGameFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/name"
        app:boxStrokeColor="@color/secondaryColor"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/secondaryColor"
        app:layout_constraintBottom_toTopOf="@id/btn_change_difficulties"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:maxLength="25"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change_difficulties"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/change"
        android:textColor="@color/secondaryColor"
        app:layout_constraintBottom_toTopOf="@id/btn_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_name_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/start"
        android:textSize="32sp"
        app:backgroundTint="@color/secondaryColor"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_change_difficulties" />

</androidx.constraintlayout.widget.ConstraintLayout>